tests/baselines/reference/esDecorators-classDeclaration-accessors-nonStaticAbstract(target=esnext).errors.txt
esDecorators-classDeclaration-accessors-nonStaticAbstract.ts(6,5): error TS1206: Decorators are not valid here.
esDecorators-classDeclaration-accessors-nonStaticAbstract.ts(7,5): error TS1206: Decorators are not valid here.
esDecorators-classDeclaration-accessors-nonStaticAbstract.ts(8,5): error TS1206: Decorators are not valid here.
esDecorators-classDeclaration-accessors-nonStaticAbstract.ts(9,5): error TS1206: Decorators are not valid here.
esDecorators-classDeclaration-accessors-nonStaticAbstract.ts(10,5): error TS1206: Decorators are not valid here.
esDecorators-classDeclaration-accessors-nonStaticAbstract.ts(11,5): error TS1206: Decorators are not valid here.


==== esDecorators-classDeclaration-accessors-nonStaticAbstract.ts (6 errors) ====
    declare let dec: any;
    
    const method3 = "method3";
    
    abstract class C {
        @dec(11) abstract get method1(): number;
        ~
!!! error TS1206: Decorators are not valid here.
        @dec(12) abstract set method1(value);
        ~
!!! error TS1206: Decorators are not valid here.
        @dec(21) abstract get ["method2"](): number;
        ~
!!! error TS1206: Decorators are not valid here.
        @dec(22) abstract set ["method2"](value);
        ~
!!! error TS1206: Decorators are not valid here.
        @dec(31) abstract get [method3](): number;
        ~
!!! error TS1206: Decorators are not valid here.
        @dec(32) abstract set [method3](value);
        ~
!!! error TS1206: Decorators are not valid here.
    }
    